--- a/OSF04_Structuring-your-repository/Makefile
+++ b/OSF04_Structuring-your-repository/Makefile
@@ -1,6 +1,8 @@
-.PHONY: build dev run test
+.PHONY: build dev
 build: venv requirements.txt
 	venv/bin/pip-sync
+dev: venv requirements-dev.txt
+	venv/bin/pip-sync requirements-dev.txt
 venv:
 	python3 -m venv venv
 	venv/bin/pip3 install pip-tools
@@ -12,3 +14,11 @@ requirements.txt: requirements.in
 	--no-index \
 	--no-emit-trusted-host \
 	requirements.in
+requirements-dev.txt: requirements-dev.in
+	venv/bin/pip-compile \
+	-o requirements.txt \
+	--no-header \
+	--no-annotate \
+	--no-index \
+	--no-emit-trusted-host \
+	requirements-dev.in
